# deepShit

./: .gitignore  .python-version  README.md  pyproject.toml
prob1/: 46.txt  Assignment_1.ipynb  Image_Preprocessing.ipynb
prob1/.ipynb_checkpoints/: Assignment_1-checkpoint.ipynb  Image_Preprocessing-checkpoint.ipynb
prob1/result/: food_model_1_72acc.h5
prob2/: Assignment_2(1).ipynb  Mapping(1).csv  dataset.csv
