[tool.poetry]
name = "deepshit"
version = "0.1.0"
description = ""
authors = ["Shun Yuan <tanshunyuan99@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
keras = "^2.3.1"
matplotlib = "^3.1.2"
pandas = "^0.25.3"
numpy = "^1.18.1"
tensorflow = "^2.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
